[package]
name = "rs-label"
version = "0.1.0"
edition = "2021"
description = "TUI for Brother PT-D600 label printing over USB"
license = "MIT"

[dependencies]
rusb = "0.9"
image = "0.25"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
hex = "0.4"
